--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,8 @@
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
-    "rate-limit-redis": "^4.2.3"
+    "rate-limit-redis": "^4.2.3",
+    "stripe": "^17.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
