Add API auto deployment

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -25,6 +25,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
-    "typeRoots": ["./types"]
+    "typeRoots": ["./types", "./node_modules/@types"]
   }
 }
