--- a/api/cloudbuild.yaml
+++ b/api/cloudbuild.yaml
@@ -10,35 +10,23 @@ steps:
       - "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api:latest"
       - "."
 
-  # Push the tagged image
+  # Push images
   - name: "gcr.io/cloud-builders/docker"
+    args: ["push", "--all-tags", "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api"]
+
+  # Get GKE credentials
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: ["container", "clusters", "get-credentials", "${_GKE_CLUSTER}", "--region=${_REGION}"]
+
+  # Replace placeholder and deploy
+  - name: "gcr.io/cloud-builders/gcloud"
+    entrypoint: "bash"
     args:
-      - "push"
-      - "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api:$TAG_NAME"
-
-  # Push the latest tag
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      - "push"
-      - "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api:latest"
-
-  # Deploy to GKE
-  - name: "gcr.io/cloud-builders/gke-deploy"
-    args:
-      - "run"
-      - "--filename=api/k8s/"
-      - "--image=${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api:$TAG_NAME"
-      - "--location=${_REGION}"
-      - "--cluster=${_GKE_CLUSTER}"
-
-# These substitutions should be overridden in your Cloud Build trigger settings
-substitutions:
-  _GKE_CLUSTER: ""      # Set in trigger: your GKE cluster name
-  _REGION: ""           # Set in trigger: e.g., us-central1
-  _ARTIFACT_REPO: ""    # Set in trigger: your Artifact Registry repo name
-
-options:
-  logging: CLOUD_LOGGING_ONLY
+      - "-c"
+      - |
+        sed -i "s|IMAGE_PLACEHOLDER|${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api:$TAG_NAME|g" api/k8s/deployment.yaml
+        kubectl apply -f api/k8s/
+    env: ["CLOUDSDK_COMPUTE_REGION=${_REGION}", "CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}"]
 
 images:
   - "${_REGION}-docker.pkg.dev/$PROJECT_ID/${_ARTIFACT_REPO}/sendook-api:$TAG_NAME"
